# ImageProcessingLibrary

./: .gitignore  CMakeLists.txt  INSTALL.sh  ImageProcessing.cpp  ImageProcessing.hpp  LICENSE  README.md  main.cpp  tis.config
docker/: Dockerfile
images/: ColorTestWithOctave.m
libs/: CMakeLists.txt  Dicom.cpp  Dicom.hpp  (+3 more)
src/: CMakeLists.txt  ClassList.txt  ImageProcessing.cpp  ImageProcessing.hpp  TestPlace.cpp  main.cpp
src/[Section 03] - Basic Image Processing Concepts and Terminologies/: CMakeLists.txt
src/[Section 03] - Basic Image Processing Concepts and Terminologies/[09][Coding] Opening and Copying an Image/: CMakeLists.txt  main_03_09.cpp
src/[Section 03] - Basic Image Processing Concepts and Terminologies/[10][Coding] Creating an ImageReader and ImageWriter Function/: CMakeLists.txt  main_03_10.cpp
src/[Section 03] - Basic Image Processing Concepts and Terminologies/[11][Coding] Creating the Image Processing Library (Part I)/: CMakeLists.txt  main_03_11.cpp
src/[Section 03] - Basic Image Processing Concepts and Terminologies/[11][Coding] Creating the Image Processing Library (Part I)/libs/: ImageProcessing.cpp  ImageProcessing.h
src/[Section 11] - Filter Algorithms/: CMakeLists.txt
src/[Section 11] - Filter Algorithms/[56][Coding] Performing High-pass Spatial Filtering/: CMakeLists.txt
src/[Section 11] - Filter Algorithms/[57][Coding] Generating Gaussian Noise from an Image/: CMakeLists.txt
src/[Section 11] - Filter Algorithms/[58][Coding] Developing the Maximum Filter Algorithm/: CMakeLists.txt
src/[Section 11] - Filter Algorithms/[59][Coding] Developing the Median Filter Algorithm/: CMakeLists.txt
src/[Section 11] - Filter Algorithms/[60][Coding] Developing the Minimum Filter Algorithm/: CMakeLists.txt
src/[Section 12] - Image Formation/: CMakeLists.txt
src/[Section 12] - Image Formation/[61] Understanding how images are formed/: CMakeLists.txt  [61] Understanding how images are formed.cpp
src/[Section 12] - Image Formation/[62] Understanding the mathematics of image formation/: 62_main.cpp  CMakeLists.txt
(+4 files in other folders)
