add_subdirectory("[Section 03] - Basic Image Processing Concepts and Terminologies")
#add_subdirectory([Section [Section 04] - Arithmetic Operations)
#add_subdirectory([Section 05] - Histogram and Equalization)
#add_subdirectory([Section 06] - Geometric Operations)
#add_subdirectory([Section 07] - Gray Level Transformation)
#add_subdirectory([Section 08] - Image Enhancement Techniques)
#add_subdirectory([Section 09] - Edge Detection)
#add_subdirectory([Section 10] - Neighborhood Processing)
add_subdirectory("[Section 11] - Filter Algorithms")
add_subdirectory("[Section 12] - Image Formation")                                      #CHECKED
