add_subdirectory("[09][Coding] Opening and Copying an Image")
add_subdirectory("[10][Coding] Creating an ImageReader and ImageWriter Function")
add_subdirectory("[11][Coding] Creating the Image Processing Library (Part I)")
add_subdirectory("[12][Coding] Creating the Image Processing Library (Part II)")